--- a/packages/css/src/less/tick.less
+++ b/packages/css/src/less/tick.less
@@ -8,7 +8,7 @@
   &::after {
     content: '';
     position: absolute;
-    background: var(--color-background-screen);
+    background: #fff;
     transform: translateX(0.5px) rotate(-45deg);
     transform-origin: left bottom;
     left: var(--size-8);
